fix: fixed margin collapse issues and responsiveness

--- a/src/app/credits-page/credits-page.component.css
+++ b/src/app/credits-page/credits-page.component.css
@@ -1,5 +1,6 @@
 .credits-bg {
   height: 100vh; /* full size of the screen */
+  width: 100vw;
   background-repeat: repeat;
   overflow: auto;
   background-image: linear-gradient(
@@ -14,7 +15,7 @@
   display: flex;
   flex-direction: row;
   width: 100vw;
-  height: 50vh;
+  height: 100vh;
 }
 .header {
   background-color: #5e5a80;
@@ -42,6 +43,7 @@
   border-bottom-right-radius: 10%;
   border-bottom-left-radius: 10%;
   font-weight: bold;
+  box-sizing: border-box;
 }
 
 .a-credit {
@@ -51,4 +53,68 @@
 }
 .header:hover + .body {
   display: block;
+}
+@media screen and (max-width: 820px) {
+  .credits-bg {
+    height: 100vh; /* full size of the screen */
+    width: 100vw;
+    background-repeat: repeat;
+    overflow: auto;
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0.5),
+        rgba(255, 255, 255, 0.5)
+      ),
+      url("bg_img.JPG");
+    padding: 1%;
+  }
+  .credits-container {
+    padding-top: 15%;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: space-around;
+    width: 100vw;
+    height: 100vh;
+  }
+  .header {
+    background-color: #5e5a80;
+    max-width: 0%;
+    width: 100%;
+    height: 5vh;
+    text-align: center;
+    font-family: "zilla slab", sans-serif;
+    color: cornsilk;
+    padding: 5%;
+    font-weight: bold;
+    font-size: 50%;
+    box-sizing: border-box;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  }
+
+  .body {
+    background-color: cornsilk;
+    height: 20vh;
+    max-width: 0%;
+    width: 100%;
+    padding: 5%;
+    color: #5e5a80;
+    font-family: "zilla slab", sans-serif;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+    display: block;
+    border-bottom-right-radius: 10%;
+    border-bottom-left-radius: 10%;
+    font-weight: bold;
+    box-sizing: border-box;
+    font-size: 70%;
+    word-wrap: break-word;
+  }
+  p {
+    font-size: 100%;
+    white-space: initial;
+  }
+  .a-credit {
+    padding-top: 3%;
+    width: 20%;
+    padding: 2%;
+  }
 }
