--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,11 +1,12 @@
 .container {
+  height: 10vh;
+  width: 100vw;
   display: flex;
   flex-direction: row;
   background-color: #5e5a80;
-  height: 10vh;
-  width: 100vw;
   position: fixed;
   z-index: 1;
+  padding: 1%;
 }
 
 .header {
@@ -49,17 +50,21 @@ img {
   border: cornsilk solid thin;
 }
 @media screen and (max-width: 1192px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    background-color: #5e5a80;
+    height: 10vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 1;
+  }
   .header {
     display: none;
   }
   img {
     margin: auto;
+    max-width: 10%;
     height: 100%;
-    width: 10%;
-  }
-}
-@media screen and (max-width: 1192px) and (max-height: 414px) {
-  .container {
-    height: 18vh;
   }
 }
